install/helm-chart/charts/envoy/envoy.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy
  labels:
    app: envoy-proxy
spec:
  selector:
    matchLabels:
      app: envoy-proxy
  replicas: 1
  template: 
    metadata:
      labels:
        app: envoy-proxy     
    spec:
      containers:
        - name: envoy-proxy
          image: envoyproxy/envoy-dev:latest
          ports:
          - containerPort: 80
