install/helm-chart/charts/envoy/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              cors:
                allow_origin_string_match:
                - exact: "http://charles.info.example"
                - exact: "https://charles.info.example"
                allow_methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
                allow_headers: "Authorization,x-circle-id,x-workspace-id,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
              routes:
              - match:
                  prefix: "/moove/"
                route:
                  prefix_rewrite: "/"
                  cluster: charlescd-moove
              - match:
                  prefix: "/octopipe/"
                route:
                  prefix_rewrite: "/"
                  cluster: charlescd-octopipe
              - match:
                  prefix: "/charlescd-circle-matcher/"
                route:
                  prefix_rewrite: "/"
                  cluster: charlescd-circle-matcher
              - match:
                  prefix: "/keycloak"
                route:
                  cluster: charlescd-keycloak-http
              - match:
                  prefix: "/compass/"
                route:
                  prefix_rewrite: "/"
                  cluster: charlescd-compass
              - match:
                  prefix: "/"
                route:
                  cluster: charlescd-ui
          http_filters:
          - name: envoy.filters.http.cors
            typed_config: {}
          - name: envoy.filters.http.router
            typed_config: {}

  clusters:
  - name: charlescd-ui
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: charlescd-ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: charlescd-ui
                port_value: 3000
  - name: charlescd-moove
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: charlescd-ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: charlescd-moove
                port_value: 8080
  - name: charlescd-octopipe
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: charlescd-octopipe
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: charlescd-octopipe
                port_value: 8080
  - name: charlescd-circle-matcher
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: charlescd-circle-matcher
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: charlescd-circle-matcher
                port_value: 8080
  - name: charlescd-keycloak-http
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: charlescd-keycloak-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: charlescd-keycloak-http
                port_value: 80
  - name: charlescd-compass
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: charlescd-compass
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: charlescd-compass
                port_value: 8080

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
